@@ -3,6 +3,8 @@ This file documents the revision history for the Monitoring Webinterface Thruk.
 1.46     not yet released
           - optional favicon problem counter
           - display action/notes url on host/servicegroup pages
+          - minemap:
+            - dynamic column header height
           - panorama view:
             - optional auto hiding panel header
           - Bug Fixes
